# gIDLE

./: Future Plans  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  class_brower.c  codewidget (copy).c  codewidget.h  compile.sh  config.status  configure  configure.ac  gIDLE.cproj  main.c  newprojectwin.c  options.c  options.inf  proj_manager.c  pyclass.c  pyclass.h  python_shell.cproj  recentfiles (copy).ini  recentfiles.ini  reg_exp.py  settings.ini  string_stack.h
autom4te.cache/: output.0  requests  traces.0  traces.1
scripts/: path.py
src/: bookmark.c  bookmark.h  class_browser.c  class_browser.h  code_assist.h  code_assists.c  code_folding_widget.c  code_folding_widget.h  codewidget.c  codewidget.c~  codewidget.h  codewidget_parser.c  core_funcs.c  core_funcs.h  file_modify_box.c  file_modify_box.h  file_monitor.c  file_monitor.h  find_dialog.c  find_dialog.h  find_replace_dialog.c  find_replace_dialog.h  go_to_line_dialog.c  go_to_line_dialog.h  key_press_event.h  line_history_item.c  line_history_item.h  line_iterator.c  line_iterator.h  main.c  main.h  main_shell.c  menus.c  menus.h  menus_shell.h  new_proj_dlg.c  new_proj_dlg.h  options_dialog.c  options_dialog.h  path_browser.c  (+33 more)
src/.deps/: bookmark.Po  class_browser.Po  code_assists.Po  code_folding_widget.Po  codewidget.Po  codewidget_parser.Po  core_funcs.Po  find_dialog.Po  find_replace_dialog.Po  go_to_line_dialog.Po  line_history_item.Po  line_iterator.Po  main.Po  menus.Po  new_proj_dlg.Po  project_class.Po  pty_fork.Po  py_class.Po  py_func.Po  py_module.Po  py_static_var.Po  py_variable.Po  python_shell.Po  reg_exp_dialog.Po  run_script_dialog.Po  toolbar.Po
ui/: class_browser_dlg.glade  find_and_replace_dialog.glade  find_dialog.glade  go_to_line_dialog.glade  main.ui  new_project_dialog.glade  options_dialog.glade  project_prefs.glade  python_shell_win.glade  reg_exp_dialog.glade  run_script_dialog.glade
